Added Grunt for watching and deploying

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
+.DS_Store
+.ftppass
 .htaccess
 .sass-cache
-.DS_Store
-applet
-application.linux32
-application.linux64
-application.windows32
-application.windows64
-application.macosx
+node_modules
