--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "huddle-together",
   "version": "1.0.0",
+  "author": "Lokesh Dhakar",
+  "homepage": "http://huddletogether.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lokesh/huddle-together.git"
+  },
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-watch": "^0.5.3",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-ftp-deploy": "^0.1.1"
+    "grunt-ftp-deploy": "^0.1.10"
   }
 }
